server-game/kubernetes/resources-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-game
  namespace: default
  labels:
    app: server-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-game
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: server-game
    spec:
      containers:
        - name: server-game-1
          image: asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/server-game:${IMAGE_TAG}
          imagePullPolicy: Always
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
