server-game/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  labels:
    app: server-game
  name: server-game-service
  namespace: default
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: server-game
  sessionAffinity: ClientIP
  type: ClusterIP
